--- a/src/common-toolbar/toolbar.css
+++ b/src/common-toolbar/toolbar.css
@@ -14,6 +14,7 @@
     transition: all 0.2s;
     cursor: pointer;
     text-align: center;
+    z-index: 1000;
 }
 #config-bar-show-button:hover {
     background-color: #1f8dd6;
