--- a/src/common-toolbar/toolbar.css
+++ b/src/common-toolbar/toolbar.css
@@ -40,6 +40,7 @@
 #config-bar-content .section {
     background-color: rgba(31, 141, 214, 0.8);
     margin: 0;
+    margin-top: 5px;
     padding: 10px 20px;
     color: white;
     text-transform: uppercase;
@@ -136,4 +137,21 @@
 }
 #config-bar-property-name {
     width: 70%;
+}
+#config-bar-audit {
+    padding-left: 5px;
+}
+#config-bar-audit li {
+    list-style: none;
+    margin-bottom: 5px;
+}
+#config-bar-audit input {
+    width: 27%;
+}
+#config-bar-audit button {
+    width: 27%;
+}
+#auditChart {
+    margin: 10px auto;
+    width: 450px;
 }
