--- a/templates/common-toolbar/toolbar.html
+++ b/templates/common-toolbar/toolbar.html
@@ -24,6 +24,21 @@
                 <input type="text" disabled class="property-name" ng-model="name" />
                 <input type="text" class="property-value" placeholder="Value" ng-model="value" ng-change="override(name, value)" />
             </li>
+            <div class='section' ng-click="flashcardsOpened = !flashcardsOpened">Flashcards</div>
+            <ul id="config-bar-flashcards" ng-cloak ng-show="flashcardsOpened">
+                <li>
+                    <input type="text" ng-model="flashcardsCategories" placeholder="Categories" />
+                    <input type="text" ng-model="flashcardsContexts" placeholder="Contexts" />
+                    <input type="text" ng-model="flashcardsTypes" placeholder="Types" />
+                </li>
+                <li>
+                    <input type="text" ng-model="flashcardsLimit" placeholder="Limit" />
+                    <button ng-click="showFlashcardsPractice()">Show Practice</button>
+                </li>
+                <div style="overflow: auto; width: 100%; height: 300px;">
+                    <div id="flashcardsChart"></div>
+                </div>
+            </ul>
             <div class='section' ng-click="auditOpened = !auditOpened">Models Audit</div>
             <ul id="config-bar-audit" ng-cloak ng-show="auditOpened">
                 <li>
