show number of options and direction instead of response time

--- a/src/common-toolbar/toolbar.css
+++ b/src/common-toolbar/toolbar.css
@@ -202,3 +202,10 @@
     background-color: #cc0000;
     color: white;
 }
+#flashcardsAnswers td.direction-t2d {
+    background-color: #ff9900;
+    color: white;
+}
+#flashcardsAnswers td.direction-d2t {
+    background-color: #ffff00;
+}
