--- a/templates/common-toolbar/toolbar.html
+++ b/templates/common-toolbar/toolbar.html
@@ -68,16 +68,20 @@
                                 <th>User</th>
                                 <th>Asked</th>
                                 <th>Answered</th>
-                                <th>Response</th>
+                                <th>Opt.</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr ng-repeat="answer in flashcardsAnswers">
-                                <td><a href="/flashcards/answer/{{ answer.id }}?html" title="{{answer.time | date:'yyyy-MM-dd_HH:mm:ss'}}">{{ answer.id }}</a></td>
+                                <td>
+                                    <a href="/flashcards/answer/{{ answer.id }}?html" title="{{answer.time | date:'yyyy-MM-dd_HH:mm:ss'}}, direction: {{ answer.direction }}">
+                                        {{ answer.id }}
+                                    </a>
+                                </td>
                                 <td>{{ answer.user_id }}</td>
                                 <td>{{ answer.flashcard_asked.identifier }}</td>
                                 <td ng-class="{true: 'correct', false: 'wrong'}[answer.item_asked_id == answer.item_answered_id]">{{ answer.flashcard_answered.identifier }}</td>
-                                <td>{{ answer.response_time }}</td>
+                                <td class="direction-{{ answer.direction }}">{{ answer.options.length }}</td>
                             </tr>
                         </tbody>
                     </table>
