--- a/src/common-toolbar/toolbar.css
+++ b/src/common-toolbar/toolbar.css
@@ -39,8 +39,7 @@
 }
 #config-bar-content .section {
     background-color: rgba(31, 141, 214, 0.8);
-    margin: 0;
-    margin-top: 5px;
+    margin: 5px 0;
     padding: 5px 10px;
     color: white;
     text-transform: uppercase;
