--- a/templates/common-toolbar/toolbar.html
+++ b/templates/common-toolbar/toolbar.html
@@ -66,6 +66,7 @@
                             <tr>
                                 <th>#</th>
                                 <th>User</th>
+                                <th>Item</th>
                                 <th>Asked</th>
                                 <th>Answered</th>
                                 <th>Opt.</th>
@@ -79,6 +80,7 @@
                                     </a>
                                 </td>
                                 <td>{{ answer.user_id }}</td>
+                                <td>{{ answer.item_asked_id }}</td>
                                 <td>{{ answer.flashcard_asked.identifier }}</td>
                                 <td ng-class="{true: 'correct', false: 'wrong'}[answer.item_asked_id == answer.item_answered_id]">{{ answer.flashcard_answered.identifier }}</td>
                                 <td class="direction-{{ answer.direction }}">{{ answer.options.length }}</td>
