--- a/templates/common-toolbar/toolbar.html
+++ b/templates/common-toolbar/toolbar.html
@@ -81,8 +81,8 @@
                                 </td>
                                 <td>{{ answer.user_id }}</td>
                                 <td>{{ answer.item_asked_id }}</td>
-                                <td>{{ answer.flashcard_asked.identifier }}</td>
-                                <td ng-class="{true: 'correct', false: 'wrong'}[answer.item_asked_id == answer.item_answered_id]">{{ answer.flashcard_answered.identifier }}</td>
+                                <td>{{ answer.flashcard_asked.identifier | limitTo:12 }}</td>
+                                <td ng-class="{true: 'correct', false: 'wrong'}[answer.item_asked_id == answer.item_answered_id]">{{ answer.flashcard_answered.identifier | limitTo:12 }}</td>
                                 <td class="direction-{{ answer.direction }}">{{ answer.options.length }}</td>
                             </tr>
                         </tbody>
