--- a/src/common-toolbar/toolbar.css
+++ b/src/common-toolbar/toolbar.css
@@ -30,6 +30,9 @@
     background-color: rgba(255, 255, 255, 0.8);
     z-index: 1000;
 }
+#config-bar.maximized {
+    width: 100%;
+}
 #config-bar-header {
     background-color: rgba(31, 141, 214, 0.8);
     margin: 0;
@@ -44,6 +47,11 @@
     color: white;
     text-transform: uppercase;
     cursor: pointer;
+}
+#config-bar-maximize {
+    text-align: right;
+    cursor: pointer;
+    margin-right: 20px;
 }
 #config-bar-hide {
     text-align: right;
