--- a/src/common-toolbar/toolbar.css
+++ b/src/common-toolbar/toolbar.css
@@ -156,7 +156,7 @@
     margin-left: 0;
 }
 .ab-experiment-chart-button {
-    margin-left: 5px;
+    font-size: 13px;
     width: 15%;
 }
 #config-bar-audit input, #config-bar-flashcards input, #config-bar-recommendation input {
