--- a/templates/common-toolbar/toolbar.html
+++ b/templates/common-toolbar/toolbar.html
@@ -49,7 +49,8 @@
                     <button ng-click="drawABTestingBar('number_of_users')" class="ab-experiment-chart-button">Users</button>
                     <button ng-click="drawABTestingBar('number_of_answers')" class="ab-experiment-chart-button">Answers</button>
                     <button ng-click="drawABTestingBar('returning_chance')" class="ab-experiment-chart-button">Return</button>
-                    <button ng-click="drawABTestingLearning()" class="ab-experiment-chart-button">Learn</button>
+                    <button ng-click="drawABTestingLearning(false)" class="ab-experiment-chart-button" title="Learning curve containing only users with at least the given number of testing answers">Learn</button>
+                    <button ng-click="drawABTestingLearning(true)" class="ab-experiment-chart-button" title="Learning curve containing all users with at least one testing answer">Learn (all)</button>
                 </li>
             </ul>
             <div class='section' ng-click="flashcardsOpened = !flashcardsOpened">Flashcards</div>
