--- a/templates/user-login/login-modal.html
+++ b/templates/user-login/login-modal.html
@@ -24,11 +24,11 @@
     <form role="form" ng-submit="loginEmail()">
         <div class="form-group">
             <input type="text" class="form-control" ng-model="credentials.username"
-            placeholder="{{ 'Username' | translate }}">
+            name="username" placeholder="{{ 'Username' | translate }}">
         </div>
         <div class="form-group">
             <input type="password" class="form-control" ng-model="credentials.password"
-            placeholder="{{ 'Password' | translate }}">
+            name="password" placeholder="{{ 'Password' | translate }}">
         </div>
         <alert ng-repeat="alert in alerts" type="{{alert.type}}"
             close="closeAlert($index)">{{alert.msg}}</alert>
