--- a/templates/user-login/signup-modal.html
+++ b/templates/user-login/signup-modal.html
@@ -35,11 +35,11 @@
         </div>
         <div class="form-group">
             <input type="text" class="form-control" ng-model="credentials.username"
-                placeholder="{{ 'Username' | translate }}" required>
+                name="username" placeholder="{{ 'Username' | translate }}" required>
         </div>
         <div class="form-group">
             <input type="password" class="form-control" ng-model="credentials.password"
-                placeholder="{{ 'Password' | translate }}" required>
+                name="password" placeholder="{{ 'Password' | translate }}" required>
         </div>
         <div class="form-group">
             <input type="password" class="form-control"
