fix filter for translation

--- a/templates/feedback-rating/rating.html
+++ b/templates/feedback-rating/rating.html
@@ -1,6 +1,6 @@
 <div class="modal-header text-center">
     <h3 class="modal-title">{{ "How difficult are the questions?" | translate }}</h3>
-    {{ "Your answer helps us adjust difficulty of questions." | trans}}
+    {{ "Your answer helps us adjust difficulty of questions." | translate }}
 </div>
 <div class="rating modal-body">
     <div class=" text-center" ng-hide="answer">
